# agentic-review-gate

./: .env.example  .gitignore  AGENTS.md  CACHING_STRATEGY.md  CONSOLIDATION_SUMMARY.md  CONTRIBUTING.md  README.md  TESTING.md  WEBHOOK_CONFIGURATION.md  WEBHOOK_TEST.md  WINDOWS_SETUP.md  dev-server.bat  dev-server.ps1  examples.py  examples_test.py  pyproject.toml  requirements-dev.txt  setup.ps1  setup.sh  test_review_with_logging.py
.github/workflows/: review.yml
docs/: ARCHITECTURE.md  DEPLOYMENT.md  GITHUB_INTEGRATION.md  INTEGRATION.md  LLM_INTEGRATION.md  LLM_SETUP.md  OPERATIONS.md  README.md  SETUP.md  TESTING.md  WEBHOOK_CONFIGURATION.md  WEBHOOK_INTEGRATION.md  WEBHOOK_TESTING.md  WINDOWS_SETUP.md
scripts/: generate_readme_gif.py
src/code_reviewer/: __init__.py  main.py
src/code_reviewer/agents/: __init__.py  base.py  logic.py  security.py  summary.py
src/code_reviewer/core/: __init__.py  coordinator.py  interfaces.py  state.py
src/code_reviewer/llm/: __init__.py
src/code_reviewer/prompts/: __init__.py
src/code_reviewer/utils/: __init__.py  cache.py  diff_parser.py  github_client.py  logger.py  webhooks.py
tests/: README.md  check_comment.py  check_status.py  diagnose.py  diagnose_webhook.py  examples.py  test_agents_e2e.py  test_core.py  test_module.py  test_review_direct.py  test_utils.py  verify_files.py  webhook_test_client.py
