[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "code-reviewer"
version = "0.1.0"
description = "Production-grade multi-agent PR review system using Shared State (Blackboard) pattern"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Code Reviewer Team", email = "team@example.com" }
]
keywords = ["code-review", "multi-agent", "llm", "github", "blackboard-pattern"]

dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.0.0",
    "typing-extensions>=4.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]
llm = [
    "anthropic>=0.7.0",
    "openai>=1.0.0",
]
redis = [
    "redis>=5.0.0",
]

[project.urls]
Repository = "https://github.com/example/code-reviewer"
Documentation = "https://docs.example.com/code-reviewer"

[tool.setuptools]
packages = ["code_reviewer"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-v --cov=src/code_reviewer --cov-report=term-specific --strict-markers"
testpaths = ["tests"]
asyncio_mode = "auto"
